--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -35,7 +35,7 @@
 
     var map = L.map('map', {
         center: [46.817573, 10.868854],
-        zoom: 17
+        zoom: 12
     });
 
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
@@ -44,19 +44,45 @@
     }).addTo(map);
 
     // // Load data from jinja2
+    var geoJson = {{ geo_json | safe }}
     var elevation = {{ elevation | safe }}
     var heartRate = {{ heart_rate | safe }}
     var temperature = {{ temp | safe }}
-    console.log(elevation)
+    console.log(geoJson)
     console.log(heartRate)
     console.log(temperature)
 
-    // load gpx data
-    var gpx = '../static/data/Venter_Skirunde_.gpx'; // URL to your GPX file or the GPX itself
-    new L.GPX(gpx, {async: true}).on('loaded', function(e) {
+    var gpx = L.geoJSON(geoJson).on('loaded', function(e) {
       map.fitBounds(e.target.getBounds());
     }).addTo(map);
+    // load gpx data
+    // var gpx = '../static/data/Venter_Skirunde_.gpx'; // URL to your GPX file or the GPX itself
+    // var gpxLayer = new L.GPX(gpx, {async: true}).on('loaded', function(e) {
+    //   map.fitBounds(e.target.getBounds());
+    // });
+    gpx.setStyle({
+            color: 'blue',
+            opacity: 1,
+            weight: 5
+        });
+    gpx.on('mouseover', function(e) {
+        var layer = e.sourceTarget;
 
+        layer.setStyle({
+            color: 'red',
+            opacity: 1,
+            weight: 5
+        });
+    });
+    gpx.on('mouseout', function(e) {
+        var layer = e.sourceTarget;
+
+        layer.setStyle({
+            color: 'blue',
+            opacity: 1,
+            weight: 5
+        });
+    });
     create_test_plot();
     // createHeatmap(bli_data);
 
