--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -37,10 +37,11 @@
         center: [46.817573, 10.868854],
         zoom: 12
     });
+
     mpBox_url = 'https://api.mapbox.com/styles/v1/mat001/cl4ei2mf5001414po9oxdchts/draft/tiles/256/{z}/{x}/{y}@2x?access_token=pk.eyJ1IjoibWF0MDAxIiwiYSI6ImNsNGVpMDhpZTAzb3kzcXAxdG85bWdleTYifQ.gqjgm-0RlPBSZ-iOtEjeFg';
     L.tileLayer(mpBox_url, {
         maxZoom: 19,
-        attribution: '© OpenStreetMap'
+        attribution: '© MapBoxStudio'
     }).addTo(map);
 
     // // Load data from jinja2
@@ -48,42 +49,14 @@
     var elevation = {{ elevation | safe }}
     var heartRate = {{ heart_rate | safe }}
     var temperature = {{ temp | safe }}
-    console.log(geoJson)
-    console.log(heartRate)
-    console.log(temperature)
 
-    var gpx = L.geoJSON(geoJson).on('loaded', function(e) {
-      map.fitBounds(e.target.getBounds());
-    }).addTo(map);
-    // load gpx data
-    // var gpx = '../static/data/Venter_Skirunde_.gpx'; // URL to your GPX file or the GPX itself
-    // var gpxLayer = new L.GPX(gpx, {async: true}).on('loaded', function(e) {
-    //   map.fitBounds(e.target.getBounds());
-    // });
-    gpx.setStyle({
-            color: 'blue',
-            opacity: 1,
-            weight: 5
-        });
-    gpx.on('mouseover', function(e) {
-        var layer = e.sourceTarget;
+    // console.log(geoJson)
+    // console.log(heartRate)
+    // console.log(temperature)
 
-        layer.setStyle({
-            color: 'red',
-            opacity: 1,
-            weight: 5
-        });
-    });
-    gpx.on('mouseout', function(e) {
-        var layer = e.sourceTarget;
+    // var rectangle = new L.Rectangle(circle.getBounds()).addTo(map);
+    var rect = create_view_rectangle();
+    var gpx = create_gpx_layer(map, geoJson, rect)
 
-        layer.setStyle({
-            color: 'blue',
-            opacity: 1,
-            weight: 5
-        });
-    });
     create_test_plot();
-    // createHeatmap(bli_data);
-
 </script >
