--- a/src/static/styles/basic.css
+++ b/src/static/styles/basic.css
@@ -1,19 +1,56 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap");
 
 body {
-    font-family: 'Roboto', sans-serif;
-    height: 100vh;
+  min-height: 100vh;
+  display: flex;
+  margin: 0;
+  flex-direction: column;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
+
+  background: oldlace;
+  color: rgb(15, 15, 65);
 }
 
-
-.center {
-    width: 100%;
-    height: 80%;
-    display: flex;
-    justify-content: center;
+header {
+  padding: 2rem;
+  display: flex;
+  justify-content: space-between;
 }
 
-#map{
-    width: 50%;
-    height: 100%;
+h1 {
+  font-size: 3rem;
+  line-height: 0.8em;
+  margin: 0;
+  margin-bottom: 1rem;
+  font-weight: 300;
+}
+
+p {
+  font-size: 1rem;
+  font-weight: 400;
+  margin: 0;
+  max-width: 60ch;
+}
+.attribution {
+  text-align: right;
+}
+main {
+  flex-grow: 1;
+  display: flex;
+}
+
+.main-container {
+  flex-grow: 1;
+  flex-basis: 66%;
+  min-width: 50%;
+}
+.side-container {
+  flex-grow: 1;
+  flex-basis: 33%;
+}
+
+#map {
+  width: 100%;
+  height: 100%;
 }
