--- a/src/static/styles/basic.css
+++ b/src/static/styles/basic.css
@@ -8,8 +8,8 @@ body {
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 400;
 
-  background: oldlace;
-  color: rgb(15, 15, 65);
+  background: #fdf5e6;
+  color: #0f0f41;
 }
 
 header {
@@ -40,17 +40,16 @@ main {
   display: flex;
 }
 
-.main-container {
-  flex-grow: 1;
-  flex-basis: 66%;
-  min-width: 50%;
+.main-container,
+.side-container {
+  flex: 1 1 50%;
 }
 .side-container {
-  flex-grow: 1;
-  flex-basis: 33%;
 }
 
-#map {
+#map,
+#elevation svg,
+#slope svg {
   width: 100%;
   height: 100%;
 }
