--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,6 +16,11 @@
       integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
       crossorigin=""
     ></script>
+    <script src="https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js"></script>
+    <link
+      href="https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css"
+      rel="stylesheet"
+    />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-gpx/1.7.0/gpx.min.js"></script>
   </head>
 
@@ -41,6 +46,7 @@
       <div class="top-container">
         <div id="heartRate"></div>
         <div class="side-container">
+          <div id="last"></div>
           <div id="elevation"></div>
           <div id="slope"></div>
         </div>
@@ -54,6 +60,7 @@
   import drawElevationPlot from "/static/js/drawElevationPlot.js";
   import drawSlopePlot from "/static/js/drawSlopePlot.js";
   import drawHeartRatePlot from "/static/js/drawHeartRatePlot.js";
+  import drawLastPlot from "/static/js/drawLastPlot.js";
 
   // Load data from jinja2
   const geoJson = {{ geo_json | safe }}
@@ -81,4 +88,5 @@
   drawElevationPlot("#elevation", data);
   drawSlopePlot("#slope", data);
   drawHeartRatePlot("#heartRate", data);
+  drawLastPlot("#last", data);
 </script>
