--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -30,10 +30,14 @@
         <h1>Venter Round Tour</h1>
         <p>
           With this interactive visualization we accompany Thomas Harasser on
-          his way through the Ötztal. In 5 days, 5 peaks were climbed and 5.515
-          meters of altitude covered.
+          his way through the Ötztal. In 5 days in March of 2022, 5 peaks were
+          climbed and 5.515 meters of altitude covered with skis.
         </p>
         <p>The data was captured by a Garmin fenix 6X Pro sports watch.</p>
+        <p style="font-style: italic; opacity: 0.75; margin-top: 0.5em">
+          All plots can be zoomed and filtered by dragging and releasing on
+          them. Filters can by applied by hovering the legend.
+        </p>
       </div>
       <div class="attribution">
         <p>Niklas Noldin 51830380</p>
