fix(elevation): color bg on zoom

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -25,6 +25,23 @@
   </head>
 
   <body>
+    <div style="display: flex; text-align: center; font-weight: 400">
+      <div style="background: #0f0f41; width: 20%; color: white">
+        <p>Thursday</p>
+      </div>
+      <div style="background: #825c9a; width: 20%; color: white">
+        <p>Friday</p>
+      </div>
+      <div style="background: #ffb8f9; width: 20%">
+        <p>Saturday</p>
+      </div>
+      <div style="background: #f478ab; width: 20%">
+        <p>Sunday</p>
+      </div>
+      <div style="background: #d43d51; width: 20%; color: white">
+        <p>Monday</p>
+      </div>
+    </div>
     <header>
       <div>
         <h1>Venter Round Tour</h1>
@@ -44,7 +61,6 @@
         <p>Matthias Herret 51831178</p>
       </div>
     </header>
-
     <main>
       <div id="map"></div>
       <div class="top-container">
