feat(text): add double clicking notive

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -53,7 +53,8 @@
         <p>The data was captured by a Garmin fenix 6X Pro sports watch.</p>
         <p style="font-style: italic; opacity: 0.75; margin-top: 0.5em">
           All plots can be zoomed and filtered by dragging and releasing on
-          them. Filters can by applied by hovering the legend.
+          them. Filters can by applied by hovering the legend. Double clicking
+          the plot resets the filters.
         </p>
       </div>
       <div class="attribution">
