--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -67,9 +67,11 @@
       <div class="top-container">
         <div id="heartRate"></div>
         <div class="side-container">
-          <div id="last"></div>
           <div id="elevation"></div>
-          <div id="slope"></div>
+          <div style="display: flex">
+            <div id="last"></div>
+            <div id="slope"></div>
+          </div>
         </div>
       </div>
     </main>
